--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "Auth functionalities",
   "main": "index.js",
   "scripts": {
+    "start": "node build/index.js",
+    "dev": "ts-node-dev src/index.ts",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Joan Cerveto Serrano",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "express": "4.19.2"
   }
 }
