--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "uuid": "^10.0.0"
   }
 }
