--- a/package.json
+++ b/package.json
@@ -4,25 +4,33 @@
   "description": "Auth functionalities",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
-    "dev": "ts-node-dev src/index.ts",
+    "start": "node build/run.js",
+    "dev": "ts-node-dev src/run.ts",
     "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage --verbose --detectOpenHandles"
   },
   "author": "Joan Cerveto Serrano",
   "license": "MIT",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "uuid": "^10.0.0"
   }
 }
